# llm_evaluation_ragas

./: README.md  main.py  pyproject.toml  test.py
data/: sample_qa_pairs.json
data/experiments/: distracted_rivest.csv  naughty_lamport.csv
docs/: plan.md
examples/: __init__.py
examples/01_installation/: __init__.py  setup.py
examples/02_basic_evaluation/: __init__.py  dataset_eval.py  eval_from_scratch.py  simple_eval.py  simple_eval_ragas.py
examples/02_basic_evaluation/data/experiments/: trusting_lovelace.csv
examples/03_rag_evaluation/: __init__.py  context_metrics.py  faithfulness.py  full_rag_eval.py  simple_rag_eval.py
examples/03_rag_evaluation/harry_potter_rag/: chunking.py  create_embeddings.py  harry_potter_rag.py  harry_potter_rag_eval.py  parse_pdf_pages.py  rag_eval_from_scratch.py
examples/03_rag_evaluation/harry_potter_rag/data/experiments/: busy_lamport.csv  clever_wing.csv
examples/03_rag_evaluation/harry_potter_rag/metrics/: __init__.py  correctness.py  faithfulness.py
